[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "quadriga-lib"
dependencies = ["numpy"]
dynamic = ["version"]
description = "C++/MEX/Python Utility library for radio channel modelling and simulations"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
readme = "README_pip.md"
authors = [{name = "Stephan Jaeckel"}]
urls.Homepage = "https://quadriga-lib.org"
urls.Repository = "https://github.com/stjaeckel/quadriga-lib"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DARMA_EXT=ON",
    "-DHDF5_STATIC=ON",
    "-DENABLE_MATLAB=OFF",
    "-DENABLE_OCTAVE=OFF",
    "-DENABLE_MEX_DOC=OFF",
    "-DENABLE_PYTHON=ON",
    "-DENABLE_STATIC_LIB=ON",
    "-DENABLE_SHARED_LIB=OFF",
    "-DENABLE_AVX2=ON",
    "-DENABLE_CUDA=OFF",
    "-DENABLE_TESTS=OFF",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/quadriga_lib.hpp"
regex = '#define QUADRIGA_LIB_VERSION_STR "(?P<value>[^"]+)"'

[tool.cibuildwheel]
test-requires = ["pytest", "numpy"]
test-command = "python -m pytest {project}/tests/python_tests -x -s"

[tool.cibuildwheel.linux]
build = "cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64 cp313-manylinux_x86_64 cp314-manylinux_x86_64"

[tool.cibuildwheel.windows]
build = "cp310-win_amd64 cp311-win_amd64 cp312-win_amd64 cp313-win_amd64 cp314-win_amd64"
environment = { CMAKE_GENERATOR = "Ninja" }
